--- a/public/emails/no_docs_package/index.html
+++ b/public/emails/no_docs_package/index.html
@@ -311,13 +311,12 @@ ul.social li{
 			          	<div class="text-author">
 				          	<img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
 				          	<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
-				          	<span class="position">The following Airway Bill is in Fort Lauderdale and cannot be shipped to Nassau. Kindly send the related invoice(s).</span><br/><br/>	
+				          	<span class="position">The following shipment has been received in Florida but without an invoice and cannot be shipped to Nassau. Kindly send the related invoice(s).</span><br/><br/>	
 				          	<span class="position">AWB  #{{AWBID}}</span><br/>
 							<span class="position">Shipper    {{SHIPPERNAME}}</span>	<br/>
 							<span class="position">Description    {{AWBDESCRIPTION}}</span>	<br/>
 							<span class="position">Tracking  #{{TRACKINGNUMBER}}	</span><br/><br/>
-							<span class="position">Please forward your invoices to <a href="mailto:nodocsfll@postboxesetc.com">nodocsfll@postboxesetc.com</a> to avoid a delay in receiving your package. You MUST include the</span><br/>	
-							<span class="position">AWB NO ({{AWBNUMBER}}) in the Subject.	</span><br/><br/>
+							<span class="position">Please reply to this email with invoices attached to avoid further delay in receiving your package. </span><br/>	
 							<span class="position">Visit Us <a href="www.postboxesetc.com">www.postboxesetc.com</a></span><br/>
 							           	
 			           	</div>
