no docs email message

--- a/public/emails/no_docs_package/index.html
+++ b/public/emails/no_docs_package/index.html
@@ -311,7 +311,7 @@ ul.social li{
 			          	<div class="text-author">
 				          	<img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
 				          	<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
-				          	<span class="position">The following shipment has been received in Florida but without an invoice and cannot be shipped to Nassau. Kindly send the related invoice(s).</span><br/><br/>	
+				          	<span class="position">The following shipment has been received in Florida without an invoice and cannot be shipped to Nassau. Kindly send the related invoice(s).</span><br/><br/>	
 				          	<span class="position">AWB  #{{AWBID}}</span><br/>
 							<span class="position">Shipper    {{SHIPPERNAME}}</span>	<br/>
 							<span class="position">Description    {{AWBDESCRIPTION}}</span>	<br/>
