Store and no docs email

--- a/public/emails/store_package/index.html
+++ b/public/emails/store_package/index.html
@@ -297,7 +297,7 @@ ul.social li{
           	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
           		<tr>
           			<td class="logo" style="text-align: center;">
-			            <h1><a href="#">Package Update</a></h1>
+			            <h1><a href="#">Your package is at Store</a></h1>
 			          </td>
           		</tr>
           	</table>
@@ -310,7 +310,8 @@ ul.social li{
 			          <td style="text-align: center;">
 			          	<div class="text-author">
 				          	<img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
-				          	<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
+										<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
+										<span class="position">Your order has arrived at the store</span><br/>
 				          	<span class="position">The following is your total amount due is ${{TOTALPRICE}} for the following AirWay Bill:</span><br/><br/>	
 				          	<span class="position">AWB #{{AWBID}}</span><br/>
 							<span class="position">Shipper    {{SHIPPERNAME}}</span>	<br/>
