package notes and pricing

--- a/public/emails/store_package/index.html
+++ b/public/emails/store_package/index.html
@@ -311,7 +311,7 @@ ul.social li{
 			          	<div class="text-author">
 				          	<img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
 										<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
-										<span class="position">Your order has arrived at the store</span><br/>
+										<span class="position">Your order has arrived at the store.</span><br/>
 				          	<span class="position">The following is your total amount due is ${{TOTALPRICE}} for the following AirWay Bill:</span><br/><br/>	
 				          	<span class="position">AWB #{{AWBID}}</span><br/>
 							<span class="position">Shipper    {{SHIPPERNAME}}</span>	<br/>
