--- a/public/emails/store_package/index.html
+++ b/public/emails/store_package/index.html
@@ -313,10 +313,10 @@ ul.social li{
 										<h3 class="name">Dear {{CUSTOMERNAME}},</h3><br/>
 										<span class="position">Your order has arrived at the store.</span><br/>
 				          	<span class="position">The following is your total amount due is ${{TOTALPRICE}} for the following AirWay Bill:</span><br/><br/>	
-				          	<span class="position">AWB #{{AWBID}}</span><br/>
-							<span class="position">Shipper    {{SHIPPERNAME}}</span>	<br/>
-							<span class="position">Description    {{AWBDESCRIPTION}}</span>	<br/>
-							<span class="position">Tracking  #{{TRACKINGNUMBER}}	</span><br/><br/>
+				          	<span class="position">AWB Number : {{AWBID}}</span><br/>
+							<span class="position">Shipper : {{SHIPPERNAME}}</span>	<br/>
+							<span class="position">Description : {{AWBDESCRIPTION}}</span>	<br/>
+							<span class="position">Tracking Number : {{TRACKINGNUMBER}}	</span><br/><br/>
 							<!--<span class="position">Please forward your invoices to <a href="mailto:nodocsfll@postboxesetc.com">nodocsfll@postboxesetc.com</a> to avoid a delay in receiving your package. You MUST include the</span><br/>	
 							<span class="position">AWB NO (1344256) in the Subject.	</span><br/><br/>-->
 							<span class="position">Visit Us <a href="www.postboxesetc.com">www.postboxesetc.com</a></span><br/>
