--- a/public/emails/reset_password/user1.html
+++ b/public/emails/reset_password/user1.html
@@ -309,8 +309,10 @@ ul.social li{
             	<tr>
 			          <td style="text-align: center;">
 			          	<div class="text-author">
-				          	<img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
-				          	<h3 class="name">Dear {{NAME}},</h3><br/>
+				          	<!-- <img src="{{HOST}}/img/pbe-logo.png" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;"> -->
+				          	<img src="{{HOST}}/img/{{FILENAMEIMG}}" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; display: block;">
+				          	
+							  <h3 class="name">Dear {{NAME}},</h3><br/>
 				          	
 							  <multiline>
 								Please click the link below to reset your password or use the link <br/>
